--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,6 @@
   year      = {2024},
   publisher = {IEEE},
   month     = {Sept},
-  pdf       = {example_pdf.pdf},
+  pdf       = {ppig2024.pdf},
   selected  = {true}
 }
