Fixes typo in the seaborn post

--- a/_posts/2024-06-01-seaborn.qmd
+++ b/_posts/2024-06-01-seaborn.qmd
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Seaborn Examples"
-description: "Music data clustering using K-Means algorithm"
+description: "Seaborn usage examples"
 # author:
 #   - name: Yoseph Berhanu
 #     url: https://yoseph.et/
