Updates PPIG paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,10 +2,10 @@
 ---
 
 @book{alebachewProposal,
-  title     = {Proposed Experiment on Automatic Bias Detection in Source Code Review},
+  title     = {Automatic Bias Detection in Source Code Review},
   author    = {Yoseph Berhanu Alebachew and Chris Brown},
   year      = {2024},
-  publisher = {IEEE},
+  publisher = {PPIG},
   month     = {Sept},
   pdf       = {ppig2024.pdf},
   selected  = {true}
