Updates RL project

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   year      = {2024},
   publisher = {PPIG},
   month     = {Sept},
-  pdf       = {PPIG2024.pdf},
-  selected  = {true}
+  pdf       = {https://ppig.org/files/2024-PPIG-35th-alebachew.pdf},
+  selected  = {true},
+  link      = {https://ppig.org/papers/2024-ppig-35th-alebachew/}
 }
