Adds NAACL_25 paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,21 @@
----
----
+@inproceedings{Vaishampayan2025,
+  title     = {Human and LLM-Based Resume Matching: An Observational Study},
+  author    = {Swanand Vaishampayan and Hunter Leary and Yoseph Berhanu Alebachew and Louis Hickman and Brent Stevenor and Fletcher Wimbush and Weston Beck and Chris Brown},
+  year      = {2025},
+  booktitle = {Proceedings of NAACL 2025},
+  month     = apr,
+  pdf       = {NAACL_2025.pdf},
+  selected  = {true},
+  link      = {#}
+}
 
-@book{alebachewProposal,
+@inproceedings{alebachewProposal,
   title     = {Automatic Bias Detection in Source Code Review},
   author    = {Yoseph Berhanu Alebachew and Chris Brown},
   year      = {2024},
-  publisher = {PPIG},
-  month     = {Sept},
-  pdf       = {https://ppig.org/files/2024-PPIG-35th-alebachew.pdf},
+  booktitle = {Proceedings of PPIG 2024},
+  month     = sep,
+  pdf       = {PPIG2024.pdf},
   selected  = {true},
   link      = {https://ppig.org/papers/2024-ppig-35th-alebachew/}
 }
