Adds EASE news and paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,24 @@
-@inproceedings{Vaishampayan2025,
+@inproceedings{alebachew2025samepage,
+  title     = {Are We on the Same Page? Examining Developer Perception Alignment in Open Source Code Reviews},
+  author    = {Yoseph Berhanu Alebachew and Minhyuk Ko and Chris Brown},
+  booktitle = {Proceedings of the 29th International Conference on Evaluation and Assessment in Software Engineering (EASE)},
+  year      = {2025},
+  publisher = {ACM},
+  selected  = {true},
+  address   = {Istanbul, Turkey},
+  pdf       = {EASE2025.pdf}
+}
+@inproceedings{baishampayan2025human,
   title     = {Human and LLM-Based Resume Matching: An Observational Study},
   author    = {Swanand Vaishampayan and Hunter Leary and Yoseph Berhanu Alebachew and Louis Hickman and Brent Stevenor and Fletcher Wimbush and Weston Beck and Chris Brown},
   year      = {2025},
   booktitle = {Proceedings of NAACL 2025},
   month     = apr,
   pdf       = {NAACL_2025.pdf},
-  selected  = {true},
-  link      = {#}
+  selected  = {true}
 }
 
-@inproceedings{alebachewProposal,
+@inproceedings{alebachew2024automatic,
   title     = {Automatic Bias Detection in Source Code Review},
   author    = {Yoseph Berhanu Alebachew and Chris Brown},
   year      = {2024},
